--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -210,7 +210,7 @@ a {
 }
 
 a:hover {
-	color: #43bff0 !important;
+	color: #540f9b !important;
 }
 
 a img {
@@ -2075,8 +2075,21 @@ ul.actions li:first-child {
 	position: relative;
 	left: 0em;
 	top: 0em;
-	/* margin: -4em 0 4em -4em; */
+	text-decoration: none;
 	width: auto;
+	font-size: 1em;
+	font-weight: 700;
+	color: #190330;
+	line-height: 1;
+	transition: .5s all ease-in-out;
+}
+
+.featured:hover {
+	box-shadow: 0 10px 40px 0 #1903304f;
+}
+
+.featured p {
+	padding: 1em 0;
 }
 
 /* Icons */
